apps/khuedoan/hn4e/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/dataplane-mode: ambient
  name: khuedoan-hn4e-production
