apps/khuedoan/hn4e/production/deployment-hn4e.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hn4e
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hn4e
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hn4e
    spec:
      containers:
      - image: registry.registry.svc.cluster.local/apps/khuedoan/hn4e:c490535526e172f08478d7361dba6fc1f115a598
        name: hn4e
        ports:
        - containerPort: 3001
          name: http
