apps/khuedoan/hn4e/production/hn4e-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hn4e
  annotations:
    netamos.com/image: registry.registry.svc.cluster.local/apps/khuedoan/hn4e:1df645dc68d69bc130bfb39b5e2079b896457053
    netamos.com/source: image
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: hn4e
    app.kubernetes.io/managed-by: netamos
    app.kubernetes.io/name: hn4e
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: hn4e
  template:
    metadata:
      annotations:
        netamos.com/image: registry.registry.svc.cluster.local/apps/khuedoan/hn4e:1df645dc68d69bc130bfb39b5e2079b896457053
        netamos.com/source: image
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/instance: hn4e
        app.kubernetes.io/managed-by: netamos
        app.kubernetes.io/name: hn4e
    spec:
      containers:
      - image: registry.registry.svc.cluster.local/apps/khuedoan/hn4e:1df645dc68d69bc130bfb39b5e2079b896457053
        name: hn4e
        ports:
        - containerPort: 3001
          name: http
