apps/khuedoan/hn4e/production/hn4e-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hn4e
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: hn4e
    app.kubernetes.io/managed-by: netamos
    app.kubernetes.io/name: hn4e
spec:
  ports:
  - name: http
    port: 3001
    targetPort: http
  selector:
    app.kubernetes.io/instance: hn4e
