apps/khuedoan/hn4e/production/service-hn4e.yaml
apiVersion: v1
kind: Service
metadata:
  name: hn4e
spec:
  ports:
  - name: http
    port: 3001
    targetPort: http
  selector:
    app.kubernetes.io/name: hn4e
