apps/khuedoan/hn4e/production/hn4e-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hn4e
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: hn4e
    app.kubernetes.io/managed-by: netamos
    app.kubernetes.io/name: hn4e
spec:
  hostnames:
  - hn4e.khuedoan.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: istio-system
  rules:
  - backendRefs:
    - name: hn4e
      port: 3001
