apps/khuedoan/hn4e/production/httproute-hn4e.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hn4e
spec:
  hostnames:
  - hn4e.khuedoan.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: istio-system
  rules:
  - backendRefs:
    - name: hn4e
      port: 3001
    matches:
    - path:
        type: PathPrefix
        value: /
